--- a/car.ipynb
+++ b/car.ipynb
@@ -96,7 +96,8 @@
    "source": [
     "### 4.1 Grafik mit Gitterlinien\n",
     "Zunächst werden die Werte für den Bereich der $x$- und $y$-Werte festgelegt.\n",
-    "Dabei kann man in Python die Mehrfachzuweisung mit durch Kommata getrennten Elementen verwenden.   "
+    "Dabei kann man in Python die Mehrfachzuweisung mit durch Kommata getrennten Elementen verwenden.\n",
+    "Genauer gesagt, einem Tupel aus vier Variablen wird ein Tupel aus vier Werten zugewiesen."
    ]
   },
   {
@@ -335,6 +336,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "    \n",
+    "<b>Merke</b>\n",
+    "    \n",
+    "Weitere Informationen über Kurven finden Sie in [Mathematics With Python](https://github.com/Juergen-Koch-HE/Mathematics-With-Python) im Kapitel <b>Solving Mathematical Problems</b> im Abschnitt <b>Curves</b>.\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "    \n",
     "### Aufgabe 2\n",
@@ -435,8 +448,7 @@
     "    \n",
     "<b>Merke</b>\n",
     "    \n",
-    "Informationen zum Lösen linearer Gleichungssysteme mit Python finden Sie in dem Jupyter Notebook `linear_system.ipynb` im Moodle-Kurs Python unter der Rubrik `Examples`. \n",
-    "    \n",
+    "Informationen zum Lösen linearer Gleichungssysteme mit Python finden Sie in [Mathematics With Python](https://github.com/Juergen-Koch-HE/Mathematics-With-Python) im Kapitel <b>Solving Mathematical Problems</b> im Abschnitt <b>Linear Systems</b>.\n",
     "</div>"
    ]
   },
@@ -813,9 +825,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
