--- a/car.ipynb
+++ b/car.ipynb
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from IPython.display import IFrame, HTML"
+    "from IPython.display import Image"
    ]
   },
   {
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car5.png', width=600, height=330)"
+    "Image('car5.png', width=600, height=330)"
    ]
   },
   {
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car1.png', width=600, height=330)"
+    "Image('car1.png', width=600, height=330)"
    ]
   },
   {
@@ -362,7 +362,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car2.png', width=600, height=330)"
+    "Image('car2.png', width=600, height=330)"
    ]
   },
   {
@@ -470,7 +470,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car3.png', width=600, height=330)"
+    "Image('car3.png', width=600, height=330)"
    ]
   },
   {
@@ -594,7 +594,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car4.png', width=600, height=330)"
+    "Image('car4.png', width=600, height=330)"
    ]
   },
   {
@@ -676,7 +676,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFrame('car5.png', width=600, height=330)"
+    "Image('car5.png', width=600, height=330)"
    ]
   },
   {
@@ -744,9 +744,9 @@
    "outputs": [],
    "source": [
     "if 'google.colab' in str(get_ipython()):\n",
-    "    print('IFrame() does not work with Google Colab')\n",
+    "    print('Image() does not work with Google Colab')\n",
     "else:\n",
-    "    display(IFrame('car.gif', width=600, height=600))"
+    "    display(Image('car.gif', width=600, height=600))"
    ]
   },
   {
@@ -811,7 +811,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
