IFrame replaced by Image

--- a/car.ipynb
+++ b/car.ipynb
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Die Funktion `IFrame()` wird zum Anzeigen von Grafiken aus Dateien verwendet."
+    "Die Funktion `Image()` wird zum Anzeigen von Grafiken aus Dateien verwendet."
    ]
   },
   {
